fixed image opacity and cropped

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -150,8 +150,12 @@ li{
 }
 
 section{
-    margin-bottom: 5rem;
-    min-height: 250px;
+    margin-top: 0;
+    padding: 0;
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 hr{
